--- a/example/collector/collector.cfg
+++ b/example/collector/collector.cfg
@@ -4,43 +4,13 @@
 ; @brief TIMAC 2.0 Main application configuration file 
 ;
 ; Group: WCS LPC
-; Target Device: linux_gateway
+; $Target Device: DEVICES $
 ;
 ; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;
-; Copyright (c) 2016-2020, Texas Instruments Incorporated
-; All rights reserved.
-;
-; Redistribution and use in source and binary forms, with or without
-; modification, are permitted provided that the following conditions
-; are met:
-;
-; *  Redistributions of source code must retain the above copyright
-;    notice, this list of conditions and the following disclaimer.
-;
-; *  Redistributions in binary form must reproduce the above copyright
-;    notice, this list of conditions and the following disclaimer in the
-;    documentation and/or other materials provided with the distribution.
-;
-; *  Neither the name of Texas Instruments Incorporated nor the names of
-;    its contributors may be used to endorse or promote products derived
-;    from this software without specific prior written permission.
-;
-; THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
-; THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-; PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
-; CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-; EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-; PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
-; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
-; WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
-; OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
-; EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-;
+; $License: BSD3 2016 $
 ; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; 
-; 
+; $Release Name: PACKAGE NAME $
+; $Release Date: PACKAGE RELEASE DATE $
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [log]
@@ -194,11 +164,12 @@
 	; The US STD 915 MHz band (50kbps/2-FSK) has channels 0 - 128.
 	; The ETSI STD 863 MHz band (50kbps/2-FSK) has channels 0 - 33.
 	; The CHINA 433 MHz band (50kbps/2-FSK/433MH12) has channels 0 - 6.
+	; The IEEE 802.15.4 has channels 11 - 26.
 	; May be set to 'all' in order to include all available channels.
-	config-channel-mask = 0
+	config-channel-mask = 11
 
 	; Setting for channel page.
-	config-channel-page = 9
+	config-channel-page = 0
 
 	; Coordinator short address.
 	config-coord-short-addr = 0xaabb
@@ -279,6 +250,7 @@
 	; PHY Configuration ID, set the ID to one of the below ID's
 	; e.g. 3 for 863 MHz
 	; PHY Description : ID
+	; - IEEE 802.15.4 operating mode #0: 0
 	; - 915MHz US Frequency band operating mode #1: 1
 	; - 863MHz ETSI Frequency band operating mode #1: 3
 	; - 433MHz China Frequency band operating mode #1: 128
@@ -289,8 +261,8 @@
 	;
 	; - 915MHz US Frequency band operating mode #3: 132
 	; - 863MHz ETSI Frequency band operating mode #3: 133
-	config-phy-id = 1
-	
+	config-phy-id = 0
+  
 	; Minimum MAC Backoff Exponent
 	config-min-backoff = 3
 	
@@ -336,7 +308,7 @@
 	; the allowed values are between 20dBm.
 	; When the nodes in the network are close to each other
 	; lowering this value will help reduce saturation.
-	config-tx-power = 14
+	config-tx-power = 20
 
 	; The maximum trickle timer window for PAN Advertisement
 	; and PAN Configuration frame transmissions.
